@@ -16,6 +16,7 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
+        <pagopa-ecommerce-commons.version>0.1.0</pagopa-ecommerce-commons.version>
     </properties>
     <dependencies>
         <dependency>
@@ -33,6 +34,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>it.pagopa</groupId>
+            <artifactId>pagopa-ecommerce-commons</artifactId>
+            <version>${pagopa-ecommerce-commons.version}</version>
         </dependency>
         <dependency>
             <groupId>com.azure.spring</groupId>
@@ -185,6 +191,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--enable-preview</jvmArguments>
+                </configuration>
+
             </plugin>
             <plugin>
                 <groupId>org.openapitools</groupId>
@@ -495,26 +505,25 @@
                             <includeConstructors>true</includeConstructors>
                         </configuration>
                     </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-plugin</artifactId>
+                <version>2.0.0-M3</version>
+                <configuration>
+                    <skipCheckoutIfExists>false</skipCheckoutIfExists>
+                    <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
+                    <scmVersionType>tag</scmVersionType>
+                    <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <goals>install -DskipTests</goals>
+                </configuration>
+                <executions>
                     <execution>
-                        <id>event-schemas</id>
+                        <phase>validate</phase>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>bootstrap</goal>
                         </goals>
-                        <configuration>
-                            <sourcePaths>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/event_version.json</sourcePath>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_activated_event.json</sourcePath>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_activation_requested_event.json</sourcePath>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_authorization_requested_event.json</sourcePath>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_authorization_status_updated_event.json</sourcePath>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_closure_sent_event.json</sourcePath>
-                                <sourcePath>${basedir}/src/main/resources/schemas/events/v1/transaction_user_receipt_added_event.json</sourcePath>
-                            </sourcePaths>
-                            <targetPackage>it.pagopa.generated.ecommerce.events.v1</targetPackage>
-                            <includeConstructors>true</includeConstructors>
-                            <generateBuilders>true</generateBuilders>
-                            <usePrimitives>true</usePrimitives>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
